<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/nazivET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Naziv"
            android:inputType="text"/>

        <EditText
            android:id="@+id/porodicaET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Porodica"
            android:inputType="text"/>

        <EditText
            android:id="@+id/medicinskoUpozorenjeET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Medicinsko upozorenje"
            android:inputType="text"/>

        <EditText
            android:id="@+id/jeloET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Jelo"
            android:inputType="text"/>

        <ListView
            android:id="@+id/medicinskaKoristLV"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:nestedScrollingEnabled="true"
            android:choiceMode="multipleChoice" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@android:color/darker_gray" />

        <ListView
            android:id="@+id/klimatskiTipLV"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:nestedScrollingEnabled="true"
            android:choiceMode="multipleChoice" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@android:color/darker_gray" />

        <ListView
            android:id="@+id/zemljisniTipLV"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:nestedScrollingEnabled="true"
            android:choiceMode="multipleChoice" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@android:color/darker_gray" />

        <ListView
            android:id="@+id/profilOkusaLV"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:nestedScrollingEnabled="true"
            android:choiceMode="singleChoice" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@android:color/darker_gray" />

        <ListView
            android:id="@+id/jelaLV"
            android:layout_width="match_parent"
            android:nestedScrollingEnabled="true"
            android:layout_height="192dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/dodajJeloBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dodaj jelo"/>

        <Button
            android:id="@+id/dodajBiljkuBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dodaj biljku"/>

        <Button
            android:id="@+id/uslikajBiljkuBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Uslikaj biljku"/>

        <ImageView
            android:id="@+id/slikaIV"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/app_name"
            tools:srcCompat="@tools:sample/avatars" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>